# micromegas

./: .dockerignore  .gitignore  .yarnrc.yml  AI_GUIDELINES.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  MKDOCS_MIGRATION.md  PR_596_SECURITY_REVIEW.md  README.md  build-docs.py  build-plugin.sh  docker-compose.yaml  go.mod  index.html  mkdocs.yml  package.json  rust-analyzer.toml  tmpclaude-76bb-cwd  validate-plugin.sh
python/micromegas/: README.md  __init__.py  pyproject.toml  request.py
python/micromegas/cli/: __init__.py  connection.py  logout.py  query.py  query_process_log.py  query_process_metrics.py  query_processes.py  write_perfetto.py
python/micromegas/examples/: cli_oidc_example.py
python/micromegas/micromegas/: __init__.py  admin.py  client.py  oidc_connection.py  perfetto.py  request.py  time.py  web_client.py
python/micromegas/tests/: __init__.py  otlp_helpers.py  test_admin.py  test_async_events.py  test_async_events_depth.py  test_blocks.py  test_cloudwatch_logs_firehose_e2e.py  test_dictionary_preservation.py  test_histo.py  test_information_schema.py  test_jsonb.py  test_log.py  test_log_stats_integration.py  test_metrics.py  test_net_spans.py  test_otlp_e2e.py  test_perfetto_integration.py  test_perfetto_trace_chunks.py  test_prepared_statement.py  test_processes.py  test_queries.py  test_screen_files.py  test_streams.py  test_time.py  test_utils.py
rust/: Cargo.toml  README.md  deny.toml  rust-toolchain.toml
rust/.cargo/: audit.toml
rust/analytics/: Cargo.toml  README.md
rust/analytics-srv/: Cargo.toml
rust/analytics-srv/src/: analytics_service.rs  auth.rs  cache.rs  call_tree.rs  cumulative_call_graph_handler.rs  cumulative_call_graph_node.rs  log_entry.rs  main.rs  metrics.rs  scope.rs  thread_block_processor.rs
rust/analytics-web-srv/: Cargo.toml
rust/analytics-web-srv/src/: auth.rs  data_source_cache.rs  data_sources.rs  lib.rs  main.rs  maps.rs  queries.rs  screen_types.rs  screens.rs  stream_query.rs  web_server.rs
rust/analytics-web-srv/tests/: auth_integration.rs  auth_unit_tests.rs  data_source_tests.rs  maps_tests.rs  models_tests.rs  routing_tests.rs  screen_types_tests.rs  stream_query_tests.rs  web_server_config_tests.rs
rust/analytics/benches/: parse_block.rs  property_get.rs
rust/analytics/src/: analytics_service.rs  arrow_properties.rs  arrow_utils.rs  async_block_processing.rs  async_events_table.rs  async_log_stream.rs  block.rs  call_tree.rs  delete.rs  flight_sql_service_impl.rs  images_table.rs  lib.rs  log_entries_table.rs  log_entry.rs  measure.rs  metadata.rs  metrics_table.rs  net_block_processing.rs  net_span_tree.rs  net_spans_table.rs  payload.rs  process.rs  properties_to_dict_udf.rs  property_set.rs  property_set_jsonb_dictionary_builder.rs  query_log_entries.rs  query_metrics.rs  query_spans.rs  query_thread_events.rs  record_batch_transformer.rs  replication.rs  response_writer.rs  scope.rs  span_table.rs  sql_arrow_bridge.rs  thread_block_processor.rs  thread_events_table.rs  time.rs
rust/analytics/tests/: async_events_tests.rs  async_span_tests.rs  async_trait_tracing_test.rs  blocks_view_merge_ordering_tests.rs  call_tree_tests.rs  catalog_tests.rs  csv_table_test.rs  dictionary_key_overflow_tests.rs  expand_histogram_tests.rs  file_cache_tests.rs  histo_view_test.rs  image_tests.rs  json_table_test.rs  jsonb_cast_tests.rs  jsonb_format_json_tests.rs  jsonb_get_tests.rs  jsonb_object_keys_tests.rs  jsonb_parse_tests.rs  limit_pushdown_tests.rs  log_tests.rs  metrics_test.rs  migration_overlap_constraint_tests.rs  net_spans_test.rs  otel_attrs_tests.rs  parse_alloc_test.rs  parse_block_tests.rs  parse_corrupt_block_tests.rs  partition_metadata_tests.rs  properties_column_accessor_tests.rs  properties_to_dict_tests.rs  properties_to_jsonb_tests.rs  property_get_tests.rs  property_set_jsonb_dictionary_builder_tests.rs  reader_factory_tests.rs  span_tests.rs  sql_arrow_bridge_tests.rs  sql_view_test.rs  static_tables_test.rs  string_column_accessor_tests.rs  test_helpers.rs  (+6 more)
rust/auth/: Cargo.toml  README.md
rust/auth/src/: api_key.rs  axum.rs  default_provider.rs  lib.rs  multi.rs  oauth_state.rs  oidc.rs  oidc_client.rs  test_utils.rs  tower.rs  types.rs  url_validation.rs  user_attribution.rs
rust/auth/tests/: api_key_tests.rs  axum_tests.rs  multi_tests.rs  oauth_state_tests.rs  oidc_tests.rs  test_utils.rs  test_utils_tests.rs  tower_tests.rs  url_validation_tests.rs  user_attribution_tests.rs
rust/axum-utils/: Cargo.toml
rust/axum-utils/src/: lib.rs
rust/capi/: Cargo.toml  README.md  cbindgen.toml
rust/capi/include/: micromegas.h
rust/capi/src/: lib.rs
rust/capi/tests/: smoke_test.rs
rust/datafusion-extensions/: Cargo.toml  README.md
rust/datafusion-extensions/src/: lib.rs  (+1 more)
rust/datafusion-wasm/: Cargo.toml  README.md  build.py
rust/examples/: README.md
rust/flight-sql-srv/: Cargo.toml  README.md
rust/http-gateway/: Cargo.toml
rust/ingestion/: Cargo.toml  README.md
rust/lgn-api-codegen/: Cargo.toml
rust/lgn-auth/: Cargo.toml
rust/lgn-blob-storage/: Cargo.toml
rust/lgn-config/: Cargo.toml
rust/lgn-online/: Cargo.toml
rust/lgn-telemetry-proto/: Cargo.toml  build.rs
rust/lgn-test-utils/: Cargo.toml
rust/micromegas-proc-macros/: Cargo.toml
rust/monolith/: Cargo.toml
rust/object-cache/: Cargo.toml  README.md
rust/object-cache-srv/: Cargo.toml  README.md
rust/otel-ingestion/: Cargo.toml  README.md
rust/perfetto/: Cargo.toml  README.md  build.rs
rust/perfetto-cli/: Cargo.toml
rust/pg-gateway-srv/: Cargo.toml  README.md
rust/public/: Cargo.toml  README.md
rust/range-cache/: Cargo.toml
rust/range-cache-client/: Cargo.toml  README.md
rust/telemetry/: Cargo.toml  README.md
rust/telemetry-admin-cli/: Cargo.toml  README.md
rust/telemetry-ingestion-srv/: Cargo.toml  README.md
rust/telemetry-maintenance-srv/: Cargo.toml  README.md
rust/telemetry-sink/: Cargo.toml  README.md
rust/trace-gen-util/: Cargo.toml
rust/tracing/: Cargo.toml  README.md
rust/transit/: Cargo.toml  README.md
rust/uri-handler/: Cargo.toml  README.md
(+41136 files in other folders)
