[workspace]
members = ["*"]
exclude = ["target"]
resolver = "2"


[workspace.package]
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/madesroches/micromegas/"
authors = ["Marc-Antoine Desroches <madesroches@gmail.com>"]
repository = "https://github.com/madesroches/micromegas/"
keywords = ["observability", "telemetry", "analytics"]


[workspace.dependencies]
micromegas-analytics = { path = "analytics", version = "0.2.1" }
micromegas-ingestion = { path = "ingestion", version = "0.2.1" }
micromegas-telemetry = { path = "telemetry", version = "0.2.1" }
micromegas-telemetry-sink = { path = "telemetry-sink", version = "0.2.1" }
micromegas-tracing = { path = "tracing", version = "0.2.1" }
micromegas-transit = { path = "transit", version = "0.2.1" }
micromegas = { path = "public" }

anyhow = "1.0"
arrow-flight = { version = "53", features = ["flight-sql-experimental"] }
arrow-ipc = { version = "53" }
async-stream = "0.3"
async-trait = "0.1"
aws-config = "0.12"
aws-sdk-s3 = "0.12"
axum = "0.7"
base64 = "0.22"
blake3 = { version = "1.3", features = ["prefer_intrinsics"] }
bytes = "1.1"
cfg-if = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2.2"
clap = { version = "4", features = ["derive"] }
colored = { version = "2" }
ctrlc = "3.2.0"
datafusion = "42"
futures = "0.3"
lazy_static = "1.4"
log = { version = "0.4", features = ["std"] }
lz4 = "1.23"
memoffset = "0.6"
object_store = { version = "0.11", features = ["aws"] }
once_cell = "1.7.2"
proc-macro2 = "1.0"
prost = { version = "0.13" }
quote = "1.0"
raw-cpuid = "10.2.0"
reqwest = {version = "0.12.4"}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.8.1", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
syn = { version = "1.0", features = ["extra-traits", "full"] }
thiserror = "1.0"
thread-id = "4.0"
tokio = { version = "1.33", features = ["macros","rt-multi-thread","tracing"]}
tokio-retry2 = "0.5.3"
tonic = { version = "0.12", features = ["transport", "tls-webpki-roots"] }
tower-http = { version = "0.5.2", features = ["cors", "limit", "timeout"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = "0.3.18"
url = "2.5.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
whoami = "1.2"
xxhash-rust = { version = "0.8.10", features = ["xxh32"] }
