[workspace]
members = ["*", "examples/write-perfetto"]
exclude = ["target", ".claude", ".*", "examples"]
resolver = "2"


[workspace.package]
version = "0.17.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/madesroches/micromegas/"
authors = ["Marc-Antoine Desroches <madesroches@gmail.com>"]
repository = "https://github.com/madesroches/micromegas/"
keywords = ["observability", "telemetry", "analytics"]


[workspace.dependencies]
micromegas-analytics = { path = "analytics", version = "0.17.0" }
micromegas-auth = { path = "auth", version = "0.17.0" }
micromegas-ingestion = { path = "ingestion", version = "0.17.0" }
micromegas-proc-macros = { path = "micromegas-proc-macros", version = "0.17.0" }
micromegas-telemetry = { path = "telemetry", version = "0.17.0" }
micromegas-telemetry-sink = { path = "telemetry-sink", version = "0.17.0" }
micromegas-tracing = { path = "tracing", version = "0.17.0" }
micromegas-transit = { path = "transit", version = "0.17.0" }
micromegas-perfetto = { path = "perfetto", version = "0.17.0" }
micromegas = { path = "public" }

anyhow = "1.0"
arrow-flight = { version = "57.0", features = ["flight-sql-experimental"] }
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bytes = "1.1"
cfg-if = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2.2"
clap = { version = "4", features = ["derive", "env"] }
colored = { version = "3" }
ctrlc = "3.2.0"
datafusion = "51.0"
futures = "0.3"
hmac = "0.12"
http = "1.1"
internment = "0.8"
jsonb = { version = "0.5.3", default-features = false, features = ["databend", "preserve_order"] }
jsonwebtoken = "9"
lazy_static = "1.4"
log = { version = "0.4", features = ["std"] }
lz4 = "1.23"
memoffset = "0.9"
moka = { version = "0.12", features = ["future"] }
object_store = { version = "0.12", features = ["aws"] }
once_cell = "1.7.2"
openidconnect = "4.0"
parquet = "57.0"
pin-project = "1.1"
proc-macro2 = "1.0"
prost = { version = "0.14" }
rand = "0.8"
quote = "1.0"
raw-cpuid = "11.3.0"
reqwest = { version = "0.12.23", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls"] }
rsa = "0.9"
serde = { version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
subtle = "2.6"
syn = { version = "1.0", features = ["extra-traits", "full"] }
sysinfo = "0.37"
thiserror = "2"
thrift = "0.17"
thread-id = "4.0"
tokio = { version = "1.47", features = ["macros","rt-multi-thread","tracing","io-util"]}
tokio-retry2 = "0.6"
tonic = { version = "0.14", features = ["server", "tls-ring", "tls-native-roots"] }
tower = { version = "0.5" }
tower-http = { version = "0.5.2", features = ["cors", "limit", "timeout"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = "0.3.20"
url = "2.5.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
whoami = "1.2"
winapi = { version = "0.3", features = ["profileapi"] }
wiremock = "0.6"
xxhash-rust = { version = "0.8.10", features = ["xxh32", "xxh64"] }
