[tool.poetry]
name = "micromegas"
version = "0.20.0"
description = "Python analytics client for the Micromegas observability platform"
authors = ["Marc-Antoine Desroches <madesroches@gmail.com>"]
homepage = "https://github.com/madesroches/micromegas/"
documentation = "https://madesroches.github.io/micromegas/docs/"
repository = "https://github.com/madesroches/micromegas/"
readme = "README.md"

[tool.poetry.dependencies]
authlib = "^1.6.6"
certifi = "^2025.4.26"
grpcio = "^1.69.0"
numpy = "^2.2.6"
pandas = "^2.2.2"
protobuf = "^5.29.0"
pyarrow = "^20.0.0"
python = "^3.10"
requests = "^2.32.0"
tabulate = "^0.9.0"
tqdm = "^4.66.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"


[tool.poetry.group.dev.dependencies]
tabulate = "^0.9.0"

[tool.poetry.scripts]
micromegas_logout = "micromegas.cli.logout:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
