[tool.poetry]
name = "micromegas"
version = "0.25.0"
description = "Python analytics client for the Micromegas observability platform"
authors = ["Marc-Antoine Desroches <madesroches@gmail.com>"]
homepage = "https://micromegas.info/"
documentation = "https://micromegas.info/docs/"
repository = "https://github.com/madesroches/micromegas/"
readme = "README.md"

[tool.poetry.dependencies]
authlib = "^1.6.7"
certifi = "^2025.4.26"
giturlparse = "^0.12.0"
grpcio = "^1.69.0"
numpy = "^2.2.6"
pandas = "^2.2.2"
protobuf = "^5.29.0"
pyarrow = "^23.0.0"
python = "^3.10"
requests = "^2.32.0"
tabulate = "^0.9.0"
tqdm = "^4.66.0"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.3"


[tool.poetry.group.dev.dependencies]
tabulate = "^0.9.0"

[tool.poetry.scripts]
micromegas-logout = "micromegas.cli.logout:main"
micromegas-query = "micromegas.cli.query:main"
micromegas-screens = "micromegas.cli.screens:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
