[package]
name = "analytics-srv"
description = "analytics test server for micromegas"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
micromegas.workspace = true
micromegas-axum-utils.workspace = true

anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
tokio.workspace = true
sqlx.workspace = true