[package]
name = "analytics-srv"
description = "analytics test server for micromegas"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
micromegas.workspace = true

anyhow.workspace = true
axum.workspace = true
clap.workspace = true
tokio.workspace = true
tower-http.workspace = true