[package]
name = "analytics-web-srv"
description = "Analytics web application for micromegas telemetry data"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
arrow-flight.workspace = true
micromegas.workspace = true

anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
datafusion.workspace = true
futures.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http = { workspace = true, features = ["fs"] }
tracing.workspace = true

[[bin]]
name = "analytics-web-srv"
path = "src/main.rs"
