[package]
name = "analytics-web-srv"
description = "Analytics web application for micromegas telemetry data"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
micromegas.workspace = true

anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
axum-extra = { version = "0.10", features = ["cookie"] }
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
datafusion.workspace = true
futures.workspace = true
http.workspace = true
micromegas-auth.workspace = true
openidconnect.workspace = true
serde.workspace = true
serde_json.workspace = true
time = "0.3"
tokio.workspace = true
tower-http = { workspace = true, features = ["fs", "normalize-path"] }

[lib]
name = "analytics_web_srv"
path = "src/lib.rs"

[[bin]]
name = "analytics-web-srv"
path = "src/main.rs"

[dev-dependencies]
axum-test = "16.4"
jsonwebtoken.workspace = true
rsa.workspace = true
tower.workspace = true
