[package]
name = "micromegas-analytics"
description = "analytics module of micromegas"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
micromegas-telemetry.workspace = true
micromegas-tracing.workspace = true
micromegas-transit.workspace = true
micromegas-ingestion.workspace = true

anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
ciborium.workspace = true
datafusion.workspace = true
futures.workspace = true
lazy_static.workspace = true
object_store.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
micromegas-telemetry-sink.workspace = true
