[package]
name = "micromegas-analytics"
description = "analytics module of micromegas"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
micromegas-telemetry.workspace = true
micromegas-tracing = { workspace = true, features = ["tokio"] }
micromegas-transit.workspace = true
micromegas-ingestion.workspace = true
micromegas-perfetto.workspace = true

anyhow.workspace = true
arrow-flight.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
ciborium.workspace = true
datafusion.workspace = true
futures.workspace = true
jsonb.workspace = true
lazy_static.workspace = true
object_store.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
micromegas-telemetry-sink.workspace = true
pin-project.workspace = true
rand.workspace = true
serial_test = "3.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "property_get"
harness = false