[package]
name = "micromegas-auth"
description = "Authentication providers for Micromegas (API keys, OIDC)"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
micromegas-tracing.workspace = true
moka.workspace = true
openidconnect.workspace = true
rand.workspace = true
reqwest.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
tonic.workspace = true
tower.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
