[package]
name = "micromegas-axum-utils"
description = "observability middleware"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
micromegas-tracing.workspace = true

anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
bytes.workspace = true
tokio.workspace = true
