[package]
name = "micromegas-datafusion-wasm"
version = "0.21.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://madesroches.github.io/micromegas/"
repository = "https://github.com/madesroches/micromegas/"
documentation = "https://docs.rs/micromegas-datafusion-wasm"
authors = ["Marc-Antoine Desroches <madesroches@gmail.com>"]
keywords = ["observability", "telemetry", "analytics"]
description = "DataFusion compiled to WebAssembly for in-browser SQL query execution, part of micromegas"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arrow = { version = "57.3", default-features = false, features = ["ipc"] }
chrono = { version = "0.4", default-features = false, features = ["wasmbind"] }
datafusion = { version = "52.1", default-features = false, features = ["nested_expressions", "sql"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.cargo-machete]
ignored = ["chrono", "getrandom", "wasm-bindgen-futures"]

[profile.release]
lto = true
opt-level = "s"
