[package]
name = "flight-sql-srv"
description = "FlightSQL server for micromegas"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
micromegas.workspace = true

anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true

[package.metadata.cargo-machete]
ignored = ["tokio"]  # Required by micromegas_main macro

[[bin]]
name = "flight-sql-srv"
path = "src/flight_sql_srv.rs"
