[package]
name = "micromegas-ingestion"
description = "telemetry ingestion module of micromegas"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
micromegas-telemetry.workspace = true
micromegas-tracing.workspace = true
micromegas-transit.workspace = true

anyhow.workspace = true
bytes.workspace = true
ciborium.workspace = true
object_store.workspace = true
serde_json.workspace = true
sqlx.workspace = true
url.workspace = true

