[package]
name = "micromegas-ingestion"
description = "telemetry ingestion module of micromegas"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
micromegas-telemetry.workspace = true
micromegas-tracing.workspace = true

anyhow.workspace = true
bytes.workspace = true
ciborium.workspace = true
sqlx.workspace = true
thiserror.workspace = true

