[package]
name = "micromegas-ingestion"
description = "telemetry ingestion module of micromegas"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
micromegas-object-cache = { workspace = true }
micromegas-telemetry = { workspace = true, features = ["server"] }
micromegas-tracing = { workspace = true, features = ["tokio"] }

anyhow.workspace = true
bytes.workspace = true
ciborium.workspace = true
object_store.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
object_store.workspace = true
serial_test = "3.2"
