[package]
name = "lgn-blob-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = "0.12"
aws-sdk-s3 = "0.12"
bytes = "1"
tracing = { path = "../tracing" }
lz4 = "1.23"
pin-project = "1"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
tokio = { version = "1.13", features = ["full", "tracing"] }
tokio-stream = "0.1.8"
tokio-util = { version = "0.6.9", features = ["full"] }
