[package]
name = "lgn-config"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "1"
config = { version = "0.13", default-features = false, features = ["toml"] }
once_cell = "1"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
toml = "0.5.8"

[dev-dependencies]
serde_json = "1"
lgn-test-utils = { version = "0.1.0", path = "../lgn-test-utils" }
