[package]
name = "lgn-telemetry-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
lz4 = "1.23"
tokio = { version = "1.13", features = [
    "macros",
    "rt-multi-thread",
    "tracing",
] }
tonic = "0.6"
prost = "0.9"

[build-dependencies]
tonic-build = "0.6"
