[package]
name = "micromegas-proc-macros"
description = "Top-level procedural macros for micromegas"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
macrotest = "1"
micromegas-telemetry-sink.workspace = true
micromegas-tracing = { workspace = true, features = ["tokio"] }
tokio = { workspace = true }
trybuild = "1"