[package]
name = "micromegas-monolith"
description = "Single-process (monolith) deployment of all Micromegas roles"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
analytics-web-srv = { path = "../analytics-web-srv" }
micromegas = { workspace = true, features = ["server"] }

anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator.workspace = true

[[bin]]
name = "micromegas-monolith"
path = "src/main.rs"
