[package]
name = "micromegas-object-cache"
description = "object range cache for micromegas: shared cache engine and client ObjectStore"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
foyer = ["dep:foyer"]

[dependencies]
micromegas-tracing.workspace = true

anyhow.workspace = true
async-trait.workspace = true
bytes = { workspace = true, features = ["serde"] }
chrono.workspace = true
futures.workspace = true
moka.workspace = true
object_store.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

foyer = { workspace = true, optional = true }

[dev-dependencies]
object_store.workspace = true
tempfile = "3.14"
tokio.workspace = true
