[package]
name = "perfetto-cli"
description = "command-line client to produce a perfetto trace"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "perfetto-cli"
path = "src/perfetto_cli.rs"

[dependencies]
micromegas.workspace = true

anyhow.workspace = true
clap.workspace = true
futures.workspace = true
tokio.workspace = true
