[package]
name = "micromegas"
description = "Micromegas is a scalable observability solution."
readme = "README.md"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
micromegas-analytics.workspace = true
micromegas-ingestion.workspace = true
micromegas-telemetry-sink.workspace = true
micromegas-telemetry.workspace = true
micromegas-tracing.workspace = true

anyhow.workspace = true
arrow-flight.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
datafusion.workspace = true
futures.workspace = true
http.workspace = true
object_store.workspace = true
once_cell.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
uuid.workspace = true