[package]
name = "micromegas"
description = "Micromegas is a scalable observability solution."
readme = "README.md"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
micromegas-analytics.workspace = true
micromegas-auth.workspace = true
micromegas-ingestion.workspace = true
micromegas-proc-macros.workspace = true
micromegas-telemetry-sink.workspace = true
micromegas-telemetry.workspace = true
micromegas-tracing = { workspace = true, features = ["tokio"] }
micromegas-perfetto.workspace = true

anyhow.workspace = true
arrow-flight.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
datafusion.workspace = true
futures.workspace = true
http.workspace = true
object_store.workspace = true
once_cell.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
uuid.workspace = true

[dev-dependencies]
wiremock = "0.6"

# Note: jsonwebtoken and rsa are also used in production code for OIDC token validation
# They're in regular dependencies, not just dev-dependencies